--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+@import 'button.scss';
+@import 'page.scss';
+@import 'swiper.scss';
+
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
