feat: ajustar estilos e cores nos componentes, adicionar novos componentes à página inicial

--- a/src/app/styles/page.scss
+++ b/src/app/styles/page.scss
@@ -18,3 +18,7 @@
   background-color: #f0f0f0; /* Cor do fundo do conteúdo */
   border-radius: 9999px; /* Garante que o conteúdo tenha bordas arredondadas */
 }
+
+.contanierPage {
+  @apply max-w-6xl w-11/12 mx-auto;
+}
