feat: component globo

--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -94,3 +94,17 @@ body {
 .gradient-border {
   background-image: linear-gradient(to right, #f70dc866, #ff550066);
 }
+
+.floating-card {
+  position: absolute;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  padding: 10px;
+  border-radius: 8px;
+  font-size: 14px;
+  width: 200px;
+  text-align: center;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
+  z-index: 900;
+}
