feat: add transition and hover effects to checkout components

--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -76,8 +76,13 @@ body {
   * {
     @apply border-border;
   }
-  body {
-    @apply bg-background text-foreground;
+  html {
+    body {
+      @apply bg-background text-foreground;
+      &[data-scroll-locked] {
+        @apply mr-0 #{!important};
+      }
+    }
   }
 }
 
